--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
         I LOVE YOU
       </h1>
       <p class="text-xl sm:text-2xl text-gray-700 italic max-w-xl mx-auto" style="font-family: 'Amatic SC', cursive; font-size: 1.4em;">
-        Contact me in this number WhatsApp : +12569078195
+        <a href="https://wa.me/12569078195" class="flex items-center justify-center gap-2 text-red-600 underline hover:text-red-800" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="w-6 h-6">
+  Contact me on WhatsApp: +12569078195
+</a>
       </p>
       <div class="flex justify-center items-center gap-6 mt-10">
         <div class="rounded-full bg-red-500 w-14 h-14 flex items-center justify-center shadow-xl hover:scale-110 transition-transform">
